--- a/index.html
+++ b/index.html
@@ -13,3 +13,19 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<body>
+    <h1>Adarsh Vishnu Naik</h1>
+    <h2> Im  a web developer</h2>
+    <hr>
+    <a href="./">Movie Ranking Website</a>
+
+    
+</body>
+</html>
