--- a/index.html
+++ b/index.html
@@ -15,17 +15,23 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <!-- TODO 7: Add the Contact Me and About Me page links -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
-    <h1>Adarsh Vishnu Naik</h1>
-    <h2> Im  a web developer</h2>
-    <hr>
-    <a href="./">Movie Ranking Website</a>
 
-    
+<head>
+  <meta charset="UTF-8">
+  <title>Angela's Portfolio</title>
+</head>
+
+<body>
+  <h1>Angela Yu's Portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
+  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
+  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <hr />
+  <a href="./public/about.html">About Me</a>
+  <a href="./public/contact.html">Contact Me</a>
 </body>
+
 </html>
